fix: prevent `main` overflow

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -13,7 +13,7 @@ body {
 html {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: linen;
+	background: linen;
 	color: black;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -54,6 +54,7 @@ body {
 	}
 	#app main {
 		height: 100vh;
+		overflow: hidden;
 		width: calc(100vw - 15rem);
 	}
 }
